--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,16 @@ Author URL: http://w3layouts.com
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="keywords"
-    content="Reprise Responsive web template, Bootstrap Web Templates" />
-  <title>Reprise Personal Category Bootstrap Responsive Web Template | Contact :: W3layouts</title>
+ 
+  <title>Official Website Of Aswin</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/specs.jpg" />
   <link href="//fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
     rel="stylesheet">
   <link href="//fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
+  
 </head>
 
 <body>
@@ -27,7 +29,7 @@ Author URL: http://w3layouts.com
     <div class="container">
       <nav class="navbar navbar-expand-lg stroke">
         <a class="navbar-brand mr-xl-5 mr-lg-3" href="index.html">
-          <span class="fa fa-black-tie"></span> Reprise
+          <span class="fa fa-black-tie"></span> ASWIN
         </a>
         <!-- if logo is image enable this   
       <a class="navbar-brand" href="#index.html">
@@ -57,9 +59,9 @@ Author URL: http://w3layouts.com
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
              <!--//search-right-->
-             <div class="search-right ml-xl-5 mr-xl-0 mr-lg-3 ">
+             <!-- <div class="search-right ml-xl-5 mr-xl-0 mr-lg-3 "> -->
               <!--/search-form-->
-                  <form action="#" method="GET" class="search-box position-relative">
+                  <!-- <form action="#" method="GET" class="search-box position-relative">
                     <div class="input-search">
                         <input type="search" placeholder="Enter Keyword" name="search" required="required"
                             autofocus="" class="search-popup">
@@ -67,9 +69,9 @@ Author URL: http://w3layouts.com
                     <button type="submit" class="btn search-btn"><i class="fa fa-search"
                             aria-hidden="true"></i></button>
                   </div>
-                </form>
+                </form> -->
               <!--//search-form-->
-            </div>
+            <!-- </div> -->
                <!--/search-right-->
           </ul>
 
@@ -110,13 +112,12 @@ Author URL: http://w3layouts.com
     <div class="container py-lg-4 py-md-3 py-2">
       <div class="title-content text-left">
           <h5 class="title-subhny mb-2">Get in touch</h5>
-          <h3 class="title-w3l"><span>Contact with our support <br>
-            during </span>emergency!</h3>
+          <h3 class="title-w3l">Get In Touch!</h3>
       </div>
       <div class="contact-grids d-grid mt-5 pt-lg-3">
         <div class="contact-left">
           <div class="cont-details">
-            <div class="cont-top margin-up">
+            <!-- <div class="cont-top margin-up">
               <div class="cont-left text-center">
                 <span class="fa fa-map-marker icon-red"></span>
               </div>
@@ -124,8 +125,8 @@ Author URL: http://w3layouts.com
                 <h6>Our head office address:</h6>
                 <p>Lorem ipsum Agency, 343 marketing, #4148 Honey street, NY - 62617.</p>
               </div>
-            </div>
-            <div class="cont-top margin-up">
+            </div> -->
+            <!-- <div class="cont-top margin-up">
               <div class="cont-left text-center">
                 <span class="fa fa-phone icon-green"></span>
               </div>
@@ -134,7 +135,7 @@ Author URL: http://w3layouts.com
                 <p><a href="tel:+1(21) 234 4567">+1(21) 234 557 4567</a></p>
                 <p><a href="tel:+1(21) 234 4567">+1(21) 234 557 4568</a></p>
               </div>
-            </div>
+            </div> -->
             <div class="cont-top margin-up">
               <div class="cont-left text-center">
                 <span class="fa fa-envelope-o icon-blue"></span>
@@ -142,24 +143,24 @@ Author URL: http://w3layouts.com
               <div class="cont-right">
                 <h6>
                   Mail us:</h6>
-                <p><a href="mailto:support@mail.com" class="mail">support@mail.com</a></p>
-                <p><a href="mailto:contact@mail.com" class="mail">contact@mail.com</a></p>
+                <p>aswinpalapetty@gmail.com</p>
+                <p>aswinpalappetty@gmail.com</p>
               </div>
             </div>
           </div>
         </div>
         <div class="contact-right">
-          <form action="https://sendmail.w3layouts.com/submitForm" method="post" class="signin-form">
+          <form id="gform" action="" class="signin-form">
             <div class="input-grids">
-              <input type="text" name="w3lName" id="w3lName" placeholder="Your Name*" class="contact-input"
+              <input type="text" name="name" id="w3lName" placeholder="Your Name*" class="contact-input"
                 required="" />
-              <input type="email" name="w3lSender" id="w3lSender" placeholder="Your Email*" class="contact-input"
+              <input type="email" name="email" id="w3lSender" placeholder="Your Email*" class="contact-input"
                 required="" />
-              <input type="text" name="w3lSubect" id="w3lSubect" placeholder="Subject*" class="contact-input"
+              <input type="text" name="subject" id="w3lSubect" placeholder="Subject*" class="contact-input"
                 required="" />
             </div>
             <div class="form-input">
-              <textarea name="w3lMessage" id="w3lMessage" placeholder="Type your message here*" required=""></textarea>
+              <textarea name="message" id="message" placeholder="Type your message here*" required=""></textarea>
             </div>
             <div class="submit-w3l-button text-lg-right">
               <button class="btn btn-style btn-primary">Send Message</button>
@@ -169,11 +170,11 @@ Author URL: http://w3layouts.com
       </div>
   </section>
   <!-- /contact-form-2 -->
-  <div class="map-iframe">
+  <!-- <div class="map-iframe">
     <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2spl!4v1562654563739!5m2!1sen!2spl"
+      src="https://www.google.co.in/maps/@10.6226706,75.9898645,16z"
       width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen=""></iframe>
-  </div>
+  </div> -->
   <!-- //contacts -->
   <!-- Footers-14 -->
   <footer class="w3l-footers-14 py-5">
@@ -184,15 +185,15 @@ Author URL: http://w3layouts.com
             <img src="assets/images/banner1.jpg" class="img-fluid radius-image">
           </div>
           <div class="text-grid grid-column">
-            <h4>Subscribe to receive my best posts once a month</h4>
+            <h4>Subscribe to receive my see my latest projects.</h4>
             <p>
-              Want to be notified when we launch a new template or an udpate. Just sign up and we'll send you a
+              Want to be notified when I launch new websites. Just sign up and we'll send you a
               notification by email.</p>
           </div>
         </div>
         <div class="col-lg-5 form-submitinfo pl-lg-5">
-          <form action="#" method="GET">
-            <input type="email" name=" placeholder" placeholder="Enter Your Email" required="">
+          <form action="" id="subscription">
+            <input type="email" name="email" placeholder="Enter Your Email" required="">
             <button type="submit" class="btn btn-primary btn-style submitbtn mt-3">Subscribe Now</button>
           </form>
         </div>
@@ -207,25 +208,16 @@ Author URL: http://w3layouts.com
           </ul>
         </div>
         <div class="col-lg-6 footer14-app text-lg-right">
-          <span>Download app :</span>
-          <a href="#url"><span class="fa fa-apple"></span></a>
-          <a href="#url"><span class="fa fa-windows"></span></a>
-          <a href="#url"><span class="fa fa-android"></span></a>
+          <span>Follow me :</span>
+          <a href="https://www.instagram.com/its.me_.aswin/"><span class="fa fa-instagram"></span></a>
+          <a href="https://www.linkedin.com/in/aswin-p-318ab2210/"><span class="fa fa-linkedin"></span></a>
+          <a href="https://www.facebook.com/aswin.achu.16718979/"><span class="fa fa-facebook"></span></a>
 
         </div>
       </div>
       <div class="footers14-bottom d-flex">
         <div class="copyright">
-          <p>© 2021 Reprise. All RIghts Reserved. Design by <a href="#URL">W3Layouts</a></p>
-        </div>
-        <div class="language-select d-flex">
-          <span class="fa fa-language" aria-hidden="true"></span>
-          <select>
-            <option>English</option>
-            <option>Estonina</option>
-            <option>Deutsch</option>
-            <option>Nederlan;ds</option>
-          </select>
+          <p>© 2021. All RIghts Reserved. Design by <a href="https://www.youtube.com/infoprism">Info Prism IT Solutions</a></p>
         </div>
       </div>
     </div>
@@ -233,6 +225,48 @@ Author URL: http://w3layouts.com
     <button onclick="topFunction()" id="movetop" title="Go to top">
       &uarr;
     </button>
+    <script>
+      $("#gform").submit((e)=>{
+          e.preventDefault()
+          $.ajax({
+              url:"https://script.google.com/macros/s/AKfycbze0cHwaPmv8odFg-fWbcEJqYtlaYz9Jr7xXBdE/exec",
+              data:$("#gform").serialize(),
+              method:"post",
+              success:function (response){
+                  alert("Form submitted successfully")
+                  window.location.reload()
+                  //window.location.href="https://google.com"
+              },
+              error:function (err){
+                  alert("Something Error")
+  
+              }
+          })
+      })
+  </script>
+
+<script>
+  $("#subscription").submit((e)=>{
+      e.preventDefault()
+      $.ajax({
+          url:"https://script.google.com/macros/s/AKfycby4mXu9Oy1cUKlgzggT0ZkweTkCuqaHdgi-8Zsn/exec",
+          data:$("#subscription").serialize(),
+          method:"post",
+          success:function (response){
+              alert("Subscribed")
+              window.location.reload()
+              //window.location.href="https://google.com"
+          },
+          error:function (err){
+              alert("Something Error")
+
+          }
+      })
+  })
+</script>
+
+
+
     <script>
       // When the user scrolls down 20px from the top of the document, show the button
       window.onscroll = function () {
@@ -258,7 +292,7 @@ Author URL: http://w3layouts.com
   </footer>
   <!-- Footers-14 -->
   <!-- Template JavaScript -->
-  <script src="assets/js/jquery-3.3.1.min.js"></script>
+  <!-- <script src="assets/js/jquery-3.3.1.min.js"></script> -->
   <script src="assets/js/theme-change.js"></script>
   <!-- disable body scroll which navbar is in active -->
   <script>
@@ -299,7 +333,7 @@ Author URL: http://w3layouts.com
   </script>
   <!--//MENU-JS-->
   <script src="assets/js/bootstrap.min.js"></script>
-
+  
 </body>
 
 </html>
