--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@ Author URL: http://w3layouts.com
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="keywords" content="Reprise Responsive web template, Bootstrap Web Templates" />
+ 
   <title>Official Website Of Aswin</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/specs.jpg" />
   <link href="//fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
     rel="stylesheet">
   <link href="//fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -106,13 +108,15 @@ Author URL: http://w3layouts.com
             <h5 class="title-subhny mb-2">About Me</h5>
             <h3 class="title-w3l"><span>I'm a Passionate developer who loves simplicity in things and crafts
                 beautiful user</span> interfaces with love.</h3>
-            <p class="mt-4">I am 20 years old web developer from Kerala in India - pursuing BCA degree from Calicut University!
+            <p class="mt-4">I am 20 years old web developer from Kerala in India - pursuing BCA degree from Calicut
+              University!
 
               <!--Through my 5 years of my career I have been working for over 500 clients from all over the World. My
-              speciality is webdesign and Angular development. I guarentee great communication and quick turnaround.--></p>
+              speciality is webdesign and Angular development. I guarentee great communication and quick turnaround.-->
+            </p>
             <div class="about-pic-grids row no-gutters mt-5">
               <div class="col-md-3 position-relative person-img">
-                <img src="assets/images/person.jpg" alt="" class="radius-image img-fluid">
+                <img src="assets/images/specs.jpg" alt="" class="radius-image img-fluid">
               </div>
               <div class="col-md-9 about-pic-info pl-lg-5 mt-md-0 mt-2">
                 <h4>Hi! I’m Aswin<br> experienced We Developer from India</h4>
@@ -178,7 +182,7 @@ Author URL: http://w3layouts.com
               From SKHSS Guruvayur
             </p>
           </li>
-          
+
         </ul>
       </div>
     </div>
@@ -195,17 +199,20 @@ Author URL: http://w3layouts.com
             <div class="area-icon icon-red">
               <span class="fa fa-paint-brush"></span>
             </div>
-            <h4><a href="#feature" class="title-head">Web Design</a></h4>
-            <p>Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi sit amet. </p>
+            <h4><a href="#feature" class="title-head">Web Designing</a></h4>
+            <p>Responsive websites are stylish and I design every website with a new ideology(More importance is given
+              to client's concepts). Custom design at affordable low cost is my specialty. </p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 grids-feature mt-md-0 mt-4">
           <div class="area-box">
-            <div class="area-icon icon-green">
+            <div class="area-icon icon-purple">
               <span class="fa fa-podcast"></span>
             </div>
-            <h4><a href="#feature" class="title-head">Brand Building</a></h4>
-            <p>Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi sit amet. </p>
+            <h4><a href="#feature" class="title-head">Web Development</a></h4>
+            <p> Both Front-End and Back-End development focused on crafting clean & user‑friendly experiences, I am
+              passionate about building excellent dynamic web applications that improves the lives of those around me.
+            </p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 grids-feature mt-lg-0 mt-4">
@@ -213,11 +220,12 @@ Author URL: http://w3layouts.com
             <div class="area-icon icon-blue">
               <span class="fa fa-laptop"></span>
             </div>
-            <h4><a href="#feature" class="title-head">App Dev</a></h4>
-            <p>Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi sit amet. </p>
+            <h4><a href="#feature" class="title-head">Digital Seva</a></h4>
+            <p>Provide e-governance services, Money Transfer, E-Sanjeevani. I provide all type of recharges, Accepted
+              all type of bill payment services, travel services Like Air, Bus, Hotel services through our portal...</p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 grids-feature mt-5">
+        <!-- <div class="col-lg-4 col-md-6 grids-feature mt-5">
           <div class="area-box">
             <div class="area-icon icon-yellow">
               <span class="fa fa-paint-brush"></span>
@@ -225,8 +233,8 @@ Author URL: http://w3layouts.com
             <h4><a href="#feature" class="title-head">Clean Code</a></h4>
             <p>Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi sit amet. </p>
           </div>
-        </div>
-        <div class="col-lg-4 col-md-6 grids-feature mt-5">
+        </div> -->
+        <!-- <div class="col-lg-4 col-md-6 grids-feature mt-5">
           <div class="area-box">
             <div class="area-icon icon-purple">
               <span class="fa fa-podcast"></span>
@@ -234,8 +242,8 @@ Author URL: http://w3layouts.com
             <h4><a href="#feature" class="title-head">Mobile apps</a></h4>
             <p>Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi sit amet. </p>
           </div>
-        </div>
-        <div class="col-lg-4 col-md-6 grids-feature mt-5">
+        </div> -->
+        <!-- <div class="col-lg-4 col-md-6 grids-feature mt-5">
           <div class="area-box">
             <div class="area-icon icon-orange">
               <span class="fa fa-laptop"></span>
@@ -243,45 +251,45 @@ Author URL: http://w3layouts.com
             <h4><a href="#feature" class="title-head">Retina Ready</a></h4>
             <p>Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi sit amet. </p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
-  <!--//w3-grids-3-->
+  
   <!-- gallery section -->
-  <div class="gallery section-agile py-5">
+  <!-- <div class="gallery section-agile py-5">
     <div class="container-fluid py-lg-5 py-md-4 px-lg-0 mx-lg-0">
       <div class="title-content text-center">
-        <h6 class="title-subhny">My Projects</h6>
+        <h6 class="title-subhny">Gallery</h6>
         <h3 class="title-w3l mb-sm-5 mb-4 pb-lg-2"> <span>
             My
           </span>
-          Projects</h3>
+          Gallery</h3>
       </div>
       <div class="row gallery_grids no-gutters">
         <div class="col-lg-4 col-6 gallery-img-grid gallery_grid1 hover14 column">
           <div class="gallery_effect">
-            <a href="assets/images/g1.jpg" class="js-img-viwer d-block">
+            <a href="assets/images/ncc.jpg" class="js-img-viwer d-block">
               <figure>
-                <img src="assets/images/g1.jpg" alt=" " class="img-fluid" />
+                <img src="assets/images/ncc.jpg" alt=" " class="img-fluid" />
               </figure>
             </a>
           </div>
         </div>
         <div class="col-lg-4 col-6 gallery-img-grid hover14 column">
           <div class="gallery_effect">
-            <a href="assets/images/g2.jpg" class="js-img-viwer d-block">
+            <a href="assets/images/specs.jpg" class="js-img-viwer d-block">
               <figure>
-                <img src="assets/images/g2.jpg" alt=" " class="img-fluid" />
+                <img src="assets/images/specs.jpg" alt=" " class="img-fluid" />
               </figure>
             </a>
           </div>
         </div>
         <div class="col-lg-4 col-6 gallery-img-grid hover14 column">
           <div class="gallery_effect">
-            <a href="assets/images/g3.jpg" class="js-img-viwer d-block">
+            <a href="assets/images/mejpg.jpg" class="js-img-viwer d-block">
               <figure>
-                <img src="assets/images/g3.jpg" alt=" " class="img-fluid" />
+                <img src="assets/images/mejpg.jpg" alt=" " class="img-fluid" />
               </figure>
             </a>
           </div>
@@ -317,8 +325,11 @@ Author URL: http://w3layouts.com
     </div>
   </div>
   <!-- //gallery section -->
+
+
+   -->
   <!-- /testimonials-->
-  <section class="w3l-clients" id="testimonials">
+  <!-- <section class="w3l-clients" id="testimonials">
     <div class="container py-lg-5 py-md-3">
       <div class="row w3-testimonial-grids">
         <div class="col-lg-6 w3-testimonial-content-top pr-lg-5">
@@ -414,11 +425,11 @@ Author URL: http://w3layouts.com
           </div>
         </div>
         <div class="col-lg-6 position-relative pl-lg-5 mt-lg-0 mt-5">
-          <img src="assets/images/person.jpg" alt="" class="radius-image img-fluid">
+          <img src="assets/images/specs.jpg" alt="" class="radius-image img-fluid">
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- //testimonials-->
   <!-- Footers-14 -->
   <footer class="w3l-footers-14 py-5">
@@ -429,15 +440,15 @@ Author URL: http://w3layouts.com
             <img src="assets/images/banner1.jpg" class="img-fluid radius-image">
           </div>
           <div class="text-grid grid-column">
-            <h4>Subscribe to receive my best posts once a month</h4>
+            <h4>Subscribe to receive my see my latest projects.</h4>
             <p>
-              Want to be notified when we launch a new template or an udpate. Just sign up and we'll send you a
+              Want to be notified when I launch new websites. Just sign up and we'll send you a
               notification by email.</p>
           </div>
         </div>
         <div class="col-lg-5 form-submitinfo pl-lg-5">
-          <form action="#" method="GET">
-            <input type="email" name=" placeholder" placeholder="Enter Your Email" required="">
+          <form action="" id="subscription">
+            <input type="email" name="email" placeholder="Enter Your Email" required="">
             <button type="submit" class="btn btn-primary btn-style submitbtn mt-3">Subscribe Now</button>
           </form>
         </div>
@@ -452,25 +463,16 @@ Author URL: http://w3layouts.com
           </ul>
         </div>
         <div class="col-lg-6 footer14-app text-lg-right">
-          <span>Download app :</span>
-          <a href="#url"><span class="fa fa-apple"></span></a>
-          <a href="#url"><span class="fa fa-windows"></span></a>
-          <a href="#url"><span class="fa fa-android"></span></a>
+          <span>Follow me :</span>
+          <a href="https://www.instagram.com/its.me_.aswin/"><span class="fa fa-instagram"></span></a>
+          <a href="https://www.linkedin.com/in/aswin-p-318ab2210/"><span class="fa fa-linkedin"></span></a>
+          <a href="https://www.facebook.com/aswin.achu.16718979/"><span class="fa fa-facebook"></span></a>
 
         </div>
       </div>
       <div class="footers14-bottom d-flex">
         <div class="copyright">
-          <p>© 2021 Reprise. All RIghts Reserved. Design by <a href="#URL">W3Layouts</a></p>
-        </div>
-        <div class="language-select d-flex">
-          <span class="fa fa-language" aria-hidden="true"></span>
-          <select>
-            <option>English</option>
-            <option>Estonina</option>
-            <option>Deutsch</option>
-            <option>Nederlan;ds</option>
-          </select>
+          <p>© 2021. All RIghts Reserved. Design by <a href="https://www.youtube.com/infoprism">Info Prism IT Solutions</a></p>
         </div>
       </div>
     </div>
@@ -478,6 +480,27 @@ Author URL: http://w3layouts.com
     <button onclick="topFunction()" id="movetop" title="Go to top">
       &uarr;
     </button>
+
+    <script>
+      $("#subscription").submit((e)=>{
+          e.preventDefault()
+          $.ajax({
+              url:"https://script.google.com/macros/s/AKfycby4mXu9Oy1cUKlgzggT0ZkweTkCuqaHdgi-8Zsn/exec",
+              data:$("#subscription").serialize(),
+              method:"post",
+              success:function (response){
+                  alert("Subscribed")
+                  window.location.reload()
+                  //window.location.href="https://google.com"
+              },
+              error:function (err){
+                  alert("Something Error")
+    
+              }
+          })
+      })
+    </script>
+
     <script>
       // When the user scrolls down 20px from the top of the document, show the button
       window.onscroll = function () {
@@ -503,7 +526,7 @@ Author URL: http://w3layouts.com
   </footer>
   <!-- Footers-14 -->
   <!-- Template JavaScript -->
-  <script src="assets/js/jquery-3.3.1.min.js"></script>
+ 
   <script src="assets/js/theme-change.js"></script>
   <!--/carousel-->
   <script src="assets/js/owl.carousel.js"></script>
