spelling mistakes cleared

--- a/services.html
+++ b/services.html
@@ -322,7 +322,7 @@ Author URL: http://w3layouts.com
             <img src="assets/images/banner1.jpg" class="img-fluid radius-image">
           </div>
           <div class="text-grid grid-column">
-            <h4>Subscribe to receive my see my latest projects.</h4>
+            <h4>Subscribe to receive my latest projects.</h4>
             <p>
               Want to be notified when I launch new websites. Just sign up and we'll send you a
               notification by email.</p>
