--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Author URL: http://w3layouts.com
                 <img src="assets/images/specs.jpg" alt="" class="radius-image img-fluid">
               </div>
               <div class="col-md-9 about-pic-info pl-lg-5 mt-md-0 mt-2">
-                <h4>Hi! I’m Aswin<br> experienced We Developer from India</h4>
+                <h4>Hi! I’m Aswin<br> experienced Web Developer from India</h4>
                 <p class="title mt-2">
                   Follow Me </p>
                 <div class="social-column-3 mt-3">
@@ -440,7 +440,7 @@ Author URL: http://w3layouts.com
             <img src="assets/images/banner1.jpg" class="img-fluid radius-image">
           </div>
           <div class="text-grid grid-column">
-            <h4>Subscribe to receive my see my latest projects.</h4>
+            <h4>Subscribe to receive my latest projects.</h4>
             <p>
               Want to be notified when I launch new websites. Just sign up and we'll send you a
               notification by email.</p>
