updateDetails : new resume added, education and experience updated, contact form updated. New image added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Author URL: http://w3layouts.com
  
   <title>Official Website Of Aswin</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/specs.jpg" />
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/Aswin_DSLR.jpg" />
   <link href="//fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
     rel="stylesheet">
   <link href="//fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -106,10 +106,9 @@ Author URL: http://w3layouts.com
         <div class="row mx-auto text-center">
           <div class="col-lg-12 mt-lg-0 mt-5 text-left">
             <h5 class="title-subhny mb-2">About Me</h5>
-            <h3 class="title-w3l"><span>I'm a Passionate developer who loves simplicity in things and crafts
+            <h3 class="title-w3l"><span>I'm a web developer who loves simplicity in things and crafts
                 beautiful user</span> interfaces with love.</h3>
-            <p class="mt-4">I am 20 years old web developer from Kerala in India - pursuing BCA degree from Calicut
-              University!
+            <p class="mt-4">I am 22 years old web developer from Kerala in India - pursuing MCA from College of Engineering Trivandrum
 
               <!--Through my 5 years of my career I have been working for over 500 clients from all over the World. My
               speciality is webdesign and Angular development. I guarentee great communication and quick turnaround.-->
@@ -119,7 +118,7 @@ Author URL: http://w3layouts.com
                 <img src="assets/images/specs.jpg" alt="" class="radius-image img-fluid">
               </div>
               <div class="col-md-9 about-pic-info pl-lg-5 mt-md-0 mt-2">
-                <h4>Hi! I’m Aswin<br> experienced Web Developer from India</h4>
+                <h4>Hi! I’m Aswin<br> Web Developer from India</h4>
                 <p class="title mt-2">
                   Follow Me </p>
                 <div class="social-column-3 mt-3">
@@ -127,13 +126,13 @@ Author URL: http://w3layouts.com
                     <span class="fa fa-linkedin mr-2"></span>
                     <span class="social-text">LinkedIn</span>
                   </a>
+                  <a href="https://github.com/AswinPalapetty" class="dribble">
+                    <span class="fa fa-github mr-2"></span>
+                    <span class="social-text">GitHub</span>
+                  </a>
                   <a href=" https://www.instagram.com/its.me_.aswin/" target="_blank" class="instagram">
                     <span class="fa fa-instagram mr-2"></span>
                     <span class="social-text">Instagram</span>
-                  </a>
-                  <a href="https://www.facebook.com/aswin.achu.16718979/" class="dribble">
-                    <span class="fa fa-facebook mr-2"></span>
-                    <span class="social-text">Facebook</span>
                   </a>
                 </div>
               </div>
@@ -159,7 +158,23 @@ Author URL: http://w3layouts.com
         <ul class="m-timeline">
           <li>
             <div class="m-timeline__date">
-              <span>Present</span> - BCA student and Freelance Web Developer
+              <span>Present</span> - MCA Student
+            </div>
+
+            <p>College of Engineering Trivandrum</p>
+          </li>
+
+          <li>
+            <div class="m-timeline__date">
+              <span>Aug 2022 - Oct 2022</span> Web Developer intern
+            </div>
+
+            <p>Alliance water solutions</p>
+          </li>
+
+          <li>
+            <div class="m-timeline__date">
+              <span>2022</span> - Completed BCA
             </div>
 
             <p>University Of Calicut</p>
@@ -215,7 +230,7 @@ Author URL: http://w3layouts.com
             </p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 grids-feature mt-lg-0 mt-4">
+        <!-- <div class="col-lg-4 col-md-6 grids-feature mt-lg-0 mt-4">
           <div class="area-box">
             <div class="area-icon icon-blue">
               <span class="fa fa-laptop"></span>
@@ -224,7 +239,7 @@ Author URL: http://w3layouts.com
             <p>Provide e-governance services, Money Transfer, E-Sanjeevani. I provide all type of recharges, Accepted
               all type of bill payment services, travel services Like Air, Bus, Hotel services through our portal...</p>
           </div>
-        </div>
+        </div> -->
         <!-- <div class="col-lg-4 col-md-6 grids-feature mt-5">
           <div class="area-box">
             <div class="area-icon icon-yellow">
@@ -466,13 +481,13 @@ Author URL: http://w3layouts.com
           <span>Follow me :</span>
           <a href="https://www.instagram.com/its.me_.aswin/"><span class="fa fa-instagram"></span></a>
           <a href="https://www.linkedin.com/in/aswin-p-318ab2210/"><span class="fa fa-linkedin"></span></a>
-          <a href="https://www.facebook.com/aswin.achu.16718979/"><span class="fa fa-facebook"></span></a>
+          <a href="https://github.com/AswinPalapetty"><span class="fa fa-github"></span></a>
 
         </div>
       </div>
       <div class="footers14-bottom d-flex">
         <div class="copyright">
-          <p>© 2021. All RIghts Reserved. Design by <a href="https://www.youtube.com/infoprism">Info Prism IT Solutions</a></p>
+          <p>© 2021. All RIghts Reserved. Design by <a href="https://www.aswinofficial.tk/">ASWIN</a></p>
         </div>
       </div>
     </div>
@@ -485,7 +500,7 @@ Author URL: http://w3layouts.com
       $("#subscription").submit((e)=>{
           e.preventDefault()
           $.ajax({
-              url:"https://script.google.com/macros/s/AKfycby4mXu9Oy1cUKlgzggT0ZkweTkCuqaHdgi-8Zsn/exec",
+              url:"https://script.google.com/macros/s/AKfycbw-N71rZy9a_FgJgd6h3UF7iqvcmjhVBNK_AGIAAclgWyphpqvk2PV6nayAjDVzcUqI0A/exec",
               data:$("#subscription").serialize(),
               method:"post",
               success:function (response){
