--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@ Author URL: http://w3layouts.com
 
   <title>Official Website Of Aswin</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/specs.jpg" />
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/Aswin_DSLR.jpg" />
   <link href="//fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
     rel="stylesheet">
   <link href="//fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -100,11 +100,12 @@ Author URL: http://w3layouts.com
                 crafts
                 beautiful user</span> interfaces with love.</h3>
             <p class="mt-4 pr-lg-5">I'm a Passionate developer who loves simplicity in things and crafts
-              beautiful user interfaces with love. I am 20 years old web developer from Kerala in India - pursuing BCA
-              degree from Calicut
-              University!
+              beautiful user interfaces with love. I am 22 years old web developer from Kerala in India - pursuing MCA
+              from College of Engineering Trivandrum.
           </div>
         </div>
+
+        
         <!-- <div class="grids-of-5 row mt-5 text-center">
           <div class="col-lg-4 col-md-6">
             <div class="grids5-info">
@@ -135,6 +136,8 @@ Author URL: http://w3layouts.com
             </div>
           </div>
         </div> -->
+
+
       </div>
     </div>
   </section>
@@ -166,7 +169,7 @@ Author URL: http://w3layouts.com
             </p>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 grids-feature mt-lg-0 mt-4">
+        <!-- <div class="col-lg-4 col-md-6 grids-feature mt-lg-0 mt-4">
           <div class="area-box">
             <div class="area-icon icon-blue">
               <span class="fa fa-laptop"></span>
@@ -175,7 +178,7 @@ Author URL: http://w3layouts.com
             <p>Provide e-governance services, Money Transfer, E-Sanjeevani. I provide all type of recharges, Accepted
               all type of bill payment services, travel services Like Air, Bus, Hotel services through our portal...</p>
           </div>
-        </div>
+        </div> -->
         <!-- <div class="col-lg-4 col-md-6 grids-feature mt-5">
           <div class="area-box">
             <div class="area-icon icon-yellow">
@@ -348,14 +351,13 @@ Author URL: http://w3layouts.com
           <span>Follow me :</span>
           <a href="https://www.instagram.com/its.me_.aswin/"><span class="fa fa-instagram"></span></a>
           <a href="https://www.linkedin.com/in/aswin-p-318ab2210/"><span class="fa fa-linkedin"></span></a>
-          <a href="https://www.facebook.com/aswin.achu.16718979/"><span class="fa fa-facebook"></span></a>
+          <a href="https://github.com/AswinPalapetty"><span class="fa fa-github"></span></a>
 
         </div>
       </div>
       <div class="footers14-bottom d-flex">
         <div class="copyright">
-          <p>© 2021. All RIghts Reserved. Design by <a href="https://www.youtube.com/infoprism">Info Prism IT
-              Solutions</a></p>
+          <p>© 2021. All RIghts Reserved. Design by <a href="https://aswinofficial.tk/">ASWIN</a></p>
         </div>
       </div>
     </div>
@@ -368,7 +370,7 @@ Author URL: http://w3layouts.com
       $("#subscription").submit((e)=>{
           e.preventDefault()
           $.ajax({
-              url:"https://script.google.com/macros/s/AKfycby4mXu9Oy1cUKlgzggT0ZkweTkCuqaHdgi-8Zsn/exec",
+              url:"https://script.google.com/macros/s/AKfycbw-N71rZy9a_FgJgd6h3UF7iqvcmjhVBNK_AGIAAclgWyphpqvk2PV6nayAjDVzcUqI0A/exec",
               data:$("#subscription").serialize(),
               method:"post",
               success:function (response){
