--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ Author URL: http://w3layouts.com
  
   <title>Official Website Of Aswin</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/specs.jpg" />
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/Aswin_DSLR.jpg" />
   <link href="//fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
     rel="stylesheet">
   <link href="//fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -102,16 +102,13 @@ Author URL: http://w3layouts.com
             <h3 class="title-w3l mb-4"><span>I'm a Passionate</span> designer & developer</h3>
             <p class="">I'm a Passionate developer who loves simplicity in things and crafts
               beautiful user interfaces with love.</p>
-            <p class="mt-3">Pellen
-              tesque libero ut justo, ultrices in ligula. Semper at
-              tempufddfel. Learn more about our work! Lorem ipsum viverra feugiat.</p>
             <div class="about-pic-info mt-4">
               <h4> Follow Me</h4>
 
               <div class="social-column-3 social-column-2 mt-3">
-                <a href="https://www.instagram.com/its.me_.aswin/" target="_blank" class="twitter">
-                  <span class="fa fa-instagram mr-2"></span>
-                  <span class="social-text">Instagram</span>
+                <a href="https://github.com/AswinPalapetty" target="_blank" class="facebook">
+                  <span class="fa fa-github mr-2"></span>
+                  <span class="social-text">GitHub</span>
                 </a>
                 <a href="https://www.linkedin.com/in/aswin-p-318ab2210/" target="_blank" class="facebook">
                   <span class="fa fa-linkedin mr-2"></span>
@@ -126,9 +123,19 @@ Author URL: http://w3layouts.com
             <!-- <h3 class="title-w3l mb-4"><span>My</span> Experience</h3> -->
             <!-- <p>Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Learn more about our work!
               Lorem ipsum viverra feugiat.</p> -->
+              <div class="left-wthree-img-inf mt-4">
+                <h4 class="title">
+                  MCA Student</h4>
+                <p>College of Engineering Trivandrum</p>
+              </div>
+              <div class="left-wthree-img-inf mt-4">
+                <h4 class="title">
+                  Web Developer intern</h4>
+                <p>Alliance Water Solutions</p>
+              </div>
             <div class="left-wthree-img-inf mt-4">
               <h4 class="title">
-                BCA student and Freelance Web Developer</h4>
+                Graduation in BCA</h4>
               <p>University Of Calicut</p>
             </div>
             <div class="left-wthree-img-inf mt-4">
@@ -143,7 +150,7 @@ Author URL: http://w3layouts.com
             </div>
           </div>
           <div class="col-lg-4 left-wthree-img mt-lg-0 mt-md-5 mt-4">
-            <img src="assets/images/ncc.jpg" alt="" class="radius-image img-fluid">
+            <img src="assets/images/Aswin_DSLR.jpg" alt="" class="radius-image img-fluid">
           </div>
 
         </div>
@@ -234,22 +241,22 @@ Author URL: http://w3layouts.com
                 <h4>HTML / CSS</h4>
               </div>
               <div class="circle1">
-                <div id="progress1" data-dimension="160" data-text="75%" data-fontsize="32" data-percent="85"
+                <div id="progress1" data-dimension="160" data-text="65%" data-fontsize="32" data-percent="65"
                   data-fgcolor="#00d280" data-bgcolor="#eee" data-width="15" data-bordersize="5" data-animationstep="2">
                 </div>
-                <h4>JavaScript</h4>
+                <h4>C</h4>
               </div>
               <div class="circle1">
-                <div id="progress2" data-dimension="160" data-text="85%" data-fontsize="32" data-percent="75"
+                <div id="progress2" data-dimension="160" data-text="65%" data-fontsize="32" data-percent="65"
                   data-fgcolor="#ffb700" data-bgcolor="#eee" data-width="15" data-bordersize="5" data-animationstep="2">
-                </div>
+                </div> 
                 <h4>Python</h4>
               </div>
               <div class="circle1">
-                <div id="progress3" data-dimension="160" data-text="70%" data-fontsize="32" data-percent="70"
+                <div id="progress3" data-dimension="160" data-text="65%" data-fontsize="32" data-percent="65"
                   data-fgcolor="#6610f2" data-bgcolor="#eee" data-width="15" data-bordersize="5" data-animationstep="2">
                 </div>
-                <h4>Java</h4>
+                <h4>Node.js</h4>
               </div>
             </div>
           </div>
@@ -269,11 +276,11 @@ Author URL: http://w3layouts.com
         <h6 class="title-subhny">Hello</h6>
         <h3 class="title-w3l mb-4 mx-0 mw-100"> <span>I Can give your business a new Creative </span>
           start right away!</h3>
-        <p class="pr-lg-5">>I'm both Front-End and Back-End developer focused on crafting clean & user‑friendly
+        <p class="pr-lg-5">I'm both Front-End and Back-End developer focused on crafting clean & user‑friendly
           experiences, I am passionate about building excellent dynamic web applications that improves the lives of
           those around me.</p>
         <div class="buttons mt-md-5 mt-4">
-          <a class="btn btn-primary btn-style mr-2" href="https://drive.google.com/file/d/1Lg86SENoP7Axc8ztHWRvmuqGcnmmL0D-/view">Download Resume</a>
+          <a class="btn btn-primary btn-style mr-2" href="https://drive.google.com/file/d/1I-G0C6r9EdMthAznnKK1h3-4uQMIVTTg/view?usp=drive_link">Download Resume</a>
 
         </div>
       </div>
@@ -315,13 +322,13 @@ Author URL: http://w3layouts.com
           <span>Follow me :</span>
           <a href="https://www.instagram.com/its.me_.aswin/"><span class="fa fa-instagram"></span></a>
           <a href="https://www.linkedin.com/in/aswin-p-318ab2210/"><span class="fa fa-linkedin"></span></a>
-          <a href="https://www.facebook.com/aswin.achu.16718979/"><span class="fa fa-facebook"></span></a>
+          <a href="https://github.com/AswinPalapetty"><span class="fa fa-github"></span></a>
 
         </div>
       </div>
       <div class="footers14-bottom d-flex">
         <div class="copyright">
-          <p>© 2021. All RIghts Reserved. Design by <a href="https://www.youtube.com/infoprism">Info Prism IT Solutions</a></p>
+          <p>© 2021. All RIghts Reserved. Design by <a href="https://www.aswinofficial.tk/">ASWIN</a></p>
         </div>
       </div>
     </div>
