--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ Author URL: http://w3layouts.com
  
   <title>Official Website Of Aswin</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/specs.jpg" />
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/Aswin_DSLR.jpg" />
   <link href="//fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
     rel="stylesheet">
   <link href="//fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -144,7 +144,7 @@ Author URL: http://w3layouts.com
                 <h6>
                   Mail us:</h6>
                 <p>aswinpalapetty@gmail.com</p>
-                <p>aswinpalappetty@gmail.com</p>
+                <p>aswinpalapppetty@gmail.com</p>
               </div>
             </div>
           </div>
@@ -211,13 +211,13 @@ Author URL: http://w3layouts.com
           <span>Follow me :</span>
           <a href="https://www.instagram.com/its.me_.aswin/"><span class="fa fa-instagram"></span></a>
           <a href="https://www.linkedin.com/in/aswin-p-318ab2210/"><span class="fa fa-linkedin"></span></a>
-          <a href="https://www.facebook.com/aswin.achu.16718979/"><span class="fa fa-facebook"></span></a>
+          <a href="https://github.com/AswinPalapetty"><span class="fa fa-github"></span></a>
 
         </div>
       </div>
       <div class="footers14-bottom d-flex">
         <div class="copyright">
-          <p>© 2021. All RIghts Reserved. Design by <a href="https://www.youtube.com/infoprism">Info Prism IT Solutions</a></p>
+          <p>© 2021. All RIghts Reserved. Design by <a href="https://aswinofficial.tk/">ASWIN</a></p>
         </div>
       </div>
     </div>
@@ -229,7 +229,7 @@ Author URL: http://w3layouts.com
       $("#gform").submit((e)=>{
           e.preventDefault()
           $.ajax({
-              url:"https://script.google.com/macros/s/AKfycbze0cHwaPmv8odFg-fWbcEJqYtlaYz9Jr7xXBdE/exec",
+              url:"https://script.google.com/macros/s/AKfycbzIFdBHJ1LMggJEcwy8IjIIB--2DH1tlUjydWWXlfIIvmsKsy59_aun_MQCPyFwgF0kPw/exec",
               data:$("#gform").serialize(),
               method:"post",
               success:function (response){
