--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Author URL: http://w3layouts.com
             </p>
             <div class="about-pic-grids row no-gutters mt-5">
               <div class="col-md-3 position-relative person-img">
-                <img src="assets/images/specs.jpg" alt="" class="radius-image img-fluid">
+                <img src="assets/images/Aswin_DSLR.jpg" alt="" class="radius-image img-fluid">
               </div>
               <div class="col-md-9 about-pic-info pl-lg-5 mt-md-0 mt-2">
                 <h4>Hi! I’m Aswin<br> Web Developer from India</h4>
